2015-12-03  Julien Bect  <julien.bect@centralesupelec.fr>

	Display a legend in several "kriging basics" examples

	* examples/01_kriging_basics/stk_example_kb01.m: Show legend
	* examples/01_kriging_basics/stk_example_kb02.m: Show legend
	* examples/01_kriging_basics/stk_example_kb04.m: Show legend
	* examples/01_kriging_basics/stk_example_kb09.m: Show legend

	@stk_model_gpposterior: A new class to represent posterior distributions

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Class
	constructor.
	* core/stk_predict.m: Transfer a large part of the predicition
	code to the method @stk_model_gpposterior/predict.m.
	* core/@stk_model_gpposterior/stk_predict.m: Overload stk_predict.
	* core/@stk_model_gpposterior/disp.m: Overload base function
	* core/@stk_model_gpposterior/display.m: Overload base function
	* core/@stk_model_gpposterior/get.m: Overload base function
	* core/@stk_model_gpposterior/subsref.m: Overload base function
	* core/@stk_model_gpposterior/vertcat.m: Overload base function
	* core/@stk_model_gpposterior/horzcat.m: Overload base function
	* core/@stk_model_gpposterior/get_dim.m: Fast getter
	* core/@stk_model_gpposterior/get_input_data.m: Fast getter
	* core/@stk_model_gpposterior/get_lognoisevariance.m: Fast getter
	* core/@stk_model_gpposterior/get_output_data.m: Fast getter
	* core/@stk_model_gpposterior/get_param.m: Fast getter

2015-11-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_isequal_tolrel.m: Bugfix and unit test.

	* misc/test/stk_isequal_tolrel.m: Bugfix and unit test.

2015-11-27  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/stk_sprintf.m: Fix header

	* arrays/@stk_dataframe/stk_sprintf.m: Fix header.

2015-11-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Improve display of size+type information

	* arrays/generic/stk_sprintf_sizetype.m: Accept objects.
	* arrays/@cell/stk_sprintf_sizetype.m: Removed.

	Add minimalist display for stk_kreq objects
